--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -14,7 +14,7 @@
     <footer>
   <section class="footer-section">
     <div class="footer-container container">
-      <a class="footer-logo" href="/src/index.html"
+      <a class="footer-logo" href="./index.html"
         ><span class="footer-logo-span">Drinkify</span
         ><svg class="icon-logo" >
           <use href="./img/sprite.svg#icon-cocktail"></use>
