--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
     </form>
     
     <div class="loader"></div>
-    <div class="gallery container"></div>
+
+    <div class="gallery-cocktails container" id=cocktail-container></div>
 
     <script type="module" src="./main.js"></script>
   </body>
