--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -4,56 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>favorite Cocktails</title>
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page with favorite Cocktails</h1>
-    </section>
-    <footer>
-  <section class="footer-section">
-    <div class="footer-container container">
-      <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-span">Drinkify</span
-        ><svg class="icon-logo" >
-          <use href="./img/sprite.svg#icon-cocktail"></use>
-        </svg>
-      </a>
-      <div class="footer-social-icon">
-        <p class="social">We in social</p>
-        <div class="icon">
-          <a
-            class="social-icon"
-            href="https://www.facebook.com/goITclub/"
-            rel="noreferrer noopener"
-            target="_blank"
-            ><svg class="icon-social" >
-              <use href="./img/sprite.svg#icon-u_facebook-f"></use></svg
-          ></a>
-          <a
-            class="social-icon"
-            href="https://www.instagram.com/goitclub/ 
-"
-            rel="noreferrer noopener"
-            target="_blank"
-            ><svg class="icon-social">
-              <use href="./img/sprite.svg#icon-u_instagram-1"></use></svg
-          ></a>
-          <a
-            class="social-icon"
-            href="https://www.youtube.com/c/GoIT
-"
-            rel="noreferrer noopener"
-            target="_blank"
-            ><svg class="icon-social">
-              <use href="./img/sprite.svg#icon-u_instagram"></use></svg
-          ></a>
+    <section class="hero-page">
+      <div class="container">
+        <h1 class="title-page">Favorite cocktails</h1>
+        <div class="page-icon">
+          <svg class="cocktail-shaker">
+            <use href="./img/sprite.svg#icon-rafiki"></use>
+          </svg>
+          <p class="page-text">
+            You haven't added any <br />
+            <span class="page-span">favorite cocktails</span> yet
+          </p>
         </div>
       </div>
-    </div>
-  </section>
-</footer>
+    </section>
+    <footer>
+      <section class="footer-section">
+        <div class="footer-container container">
+          <a class="footer-logo" href="./index.html"
+            ><span class="footer-logo-span">Drinkify</span
+            ><svg class="icon-logo">
+              <use href="./img/sprite.svg#icon-cocktail"></use>
+            </svg>
+          </a>
+          <div class="footer-social-icon">
+            <p class="social">We in social</p>
+            <div class="icon">
+              <a
+                class="social-icon"
+                href="https://www.facebook.com/goITclub/"
+                rel="noreferrer noopener"
+                target="_blank"
+                ><svg class="icon-social">
+                  <use href="./img/sprite.svg#icon-u_facebook-f"></use></svg
+              ></a>
+              <a
+                class="social-icon"
+                href="https://www.instagram.com/goitclub/ 
+"
+                rel="noreferrer noopener"
+                target="_blank"
+                ><svg class="icon-social">
+                  <use href="./img/sprite.svg#icon-u_instagram-1"></use></svg
+              ></a>
+              <a
+                class="social-icon"
+                href="https://www.youtube.com/c/GoIT
+"
+                rel="noreferrer noopener"
+                target="_blank"
+                ><svg class="icon-social">
+                  <use href="./img/sprite.svg#icon-u_instagram"></use></svg
+              ></a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
 
     <script type="module" src="./main-Cocktails.js"></script>
   </body>
