--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -16,8 +16,16 @@
   </head>
   <body>
     <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page with favorite Cocktails</h1>
+      <div class="container">
+        <p class="title-page">Favorite cocktails</p>
+        <div class="block-page">
+          <svg class="icon-rafiki" >
+          <use href="./img/sprite.svg#icon-rafiki"></use>
+        </svg>
+        <p class="text-page">You haven't added any <br><span class="text-span">favorite cocktails</span> yet</p>
+        </div>
+      </div>
+           
     </section>
     <footer>
   <section class="footer-section">
