--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
     </style>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" title="theme" href="./css/theme-dark.css"/>
   </head>
   <body>
     <load src="partials/header/header.html" />
