--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <load src="partials/header/header.html" />
     <section>
       <div class="container">
         <p class="title-page">Favorite cocktails</p>
