--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <section>
+      <load src="partials/header/header.html" />
       <div class="container">
         <p class="title-page">Favorite cocktails</p>
         <div class="block-page">
