--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -19,58 +19,63 @@
       <load src="partials/header/header.html" />
       <div class="container">
         <p class="title-page">Favorite cocktails</p>
+        <ul class="add-to-favorite-coctail-list"></ul>
         <div class="block-page">
-          <svg class="icon-rafiki" >
-          <use href="./img/sprite.svg#icon-rafiki"></use>
-        </svg>
-        <p class="text-page">You haven't added any <br><span class="text-span">favorite cocktails</span> yet</p>
+          <svg class="icon-rafiki">
+            <use href="./img/sprite.svg#icon-rafiki"></use>
+          </svg>
+          <p class="text-page">
+            You haven't added any <br /><span class="text-span"
+              >favorite cocktails</span
+            >
+            yet
+          </p>
         </div>
       </div>
-           
     </section>
     <footer>
-  <section class="footer-section">
-    <div class="footer-container container">
-      <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-span">Drinkify</span
-        ><svg class="icon-logo" >
-          <use href="./img/sprite.svg#icon-cocktail"></use>
-        </svg>
-      </a>
-      <div class="footer-social-icon">
-        <p class="social">We in social</p>
-        <div class="icon">
-          <a
-            class="social-icon"
-            href="https://www.facebook.com/goITclub/"
-            rel="noreferrer noopener"
-            target="_blank"
-            ><svg class="icon-social" >
-              <use href="./img/sprite.svg#icon-u_facebook-f"></use></svg
-          ></a>
-          <a
-            class="social-icon"
-            href="https://www.instagram.com/goitclub/ 
+      <section class="footer-section">
+        <div class="footer-container container">
+          <a class="footer-logo" href="./index.html"
+            ><span class="footer-logo-span">Drinkify</span
+            ><svg class="icon-logo">
+              <use href="./img/sprite.svg#icon-cocktail"></use>
+            </svg>
+          </a>
+          <div class="footer-social-icon">
+            <p class="social">We in social</p>
+            <div class="icon">
+              <a
+                class="social-icon"
+                href="https://www.facebook.com/goITclub/"
+                rel="noreferrer noopener"
+                target="_blank"
+                ><svg class="icon-social">
+                  <use href="./img/sprite.svg#icon-u_facebook-f"></use></svg
+              ></a>
+              <a
+                class="social-icon"
+                href="https://www.instagram.com/goitclub/ 
 "
-            rel="noreferrer noopener"
-            target="_blank"
-            ><svg class="icon-social">
-              <use href="./img/sprite.svg#icon-u_instagram-1"></use></svg
-          ></a>
-          <a
-            class="social-icon"
-            href="https://www.youtube.com/c/GoIT
+                rel="noreferrer noopener"
+                target="_blank"
+                ><svg class="icon-social">
+                  <use href="./img/sprite.svg#icon-u_instagram-1"></use></svg
+              ></a>
+              <a
+                class="social-icon"
+                href="https://www.youtube.com/c/GoIT
 "
-            rel="noreferrer noopener"
-            target="_blank"
-            ><svg class="icon-social">
-              <use href="./img/sprite.svg#icon-u_instagram"></use></svg
-          ></a>
+                rel="noreferrer noopener"
+                target="_blank"
+                ><svg class="icon-social">
+                  <use href="./img/sprite.svg#icon-u_instagram"></use></svg
+              ></a>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </section>
-</footer>
+      </section>
+    </footer>
 
     <script type="module" src="./favoriteCocktails.js"></script>
   </body>
