--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -77,6 +77,8 @@
       </section>
     </footer>
 
+    <load src="partials/modalCocktails/modalCocktails.html" />
+
     <script type="module" src="./favoriteCocktails.js"></script>
   </body>
 </html>
