--- a/src/ingredients.html
+++ b/src/ingredients.html
@@ -76,6 +76,9 @@
         </div>
       </section>
     </footer>
+
+    <load src="partials/modalCocktails/modalCocktails.html" />
+
     <script type="module" src="./favoriteIngredients.js"></script>
   </body>
 </html>
