--- a/src/ingredients.html
+++ b/src/ingredients.html
@@ -77,5 +77,9 @@
       </section>
     </footer>
     <script type="module" src="./favoriteIngredients.js"></script>
+    <script type="module" src="./js/header/theme.js"></script>
+    <script type="module" src="./js/header/open-list"></script>
+    <script type="module" src="./js/header/open-list-mob.js"></script>
+    <script type="module" src="./js/header/header.js"></script>
   </body>
 </html>
