--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -40,7 +40,7 @@
 
     <script type="module" src="./favoriteCocktails.js"></script>
     <script type="module" src="./js/header/theme.js"></script>
-    <script type="module" src="./js/header/open-list"></script>
+    <script type="module" src="./js/header/open-list.js"></script>
     <script type="module" src="./js/header/open-list-mob.js"></script>
     <script type="module" src="./js/header/header.js"></script>
   </body>
