--- a/src/ingredients.html
+++ b/src/ingredients.html
@@ -39,7 +39,7 @@
 
     <script type="module" src="./favoriteIngredients.js"></script>
     <script type="module" src="./js/header/theme.js"></script>
-    <script type="module" src="./js/header/open-list.s"></script>
+    <script type="module" src="./js/header/open-list.js"></script>
     <script type="module" src="./js/header/open-list-mob.js"></script>
     <script type="module" src="./js/header/header.js"></script>
   </body>
