--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -15,14 +15,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-     <load src="partials/header/header.html" />
+    <load src="partials/header/header.html" />
     <section>
-      
       <div class="container">
         <p class="title-page">Favorite cocktails</p>
         <ul class="add-to-favorite-coctail-list"></ul>
         <div class="block-page">
-          <svg class="icon-rafiki">
+          <svg class="icon-rafiki is-hidden">
             <use href="./img/sprite.svg#icon-rafiki"></use>
           </svg>
           <p class="text-page">
@@ -34,7 +33,7 @@
         </div>
       </div>
     </section>
-   <load src="partials/footer/footer.html" />
+    <load src="partials/footer/footer.html" />
 
     <load src="partials/modalCocktails/modalCocktails.html" />
 
