--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -16,22 +16,11 @@
   </head>
   <body>
     <load src="partials/header/header.html" />
-    <section>
-      <div class="container">
-        <p class="title-page">Favorite cocktails</p>
-        <ul class="add-to-favorite-coctail-list"></ul>
-        <div class="block-page">
-          <svg class="icon-rafiki is-hidden">
-            <use href="./img/sprite.svg#icon-rafiki"></use>
-          </svg>
-          <p class="text-page">
-            You haven't added any <br /><span class="text-span"
-              >favorite cocktails</span
-            >
-            yet
-          </p>
-        </div>
-      </div>
+    <section class="container">
+      <p class="title-page">Favorite cocktails</p>
+    </section>
+    <section class="container add-to-favorite-list">
+      <ul class="add-to-favorite-coctail-list"></ul>
     </section>
     <load src="partials/footer/footer.html" />
 
