--- a/src/ingredients.html
+++ b/src/ingredients.html
@@ -16,24 +16,11 @@
   </head>
   <body>
     <load src="partials/header/header.html" />
-    <section>
-      <div class="container">
-        <p class="title-page">Favorite ingredients</p>
-        <ul class="add-to-favorite-list"></ul>
-        <div class="block-page">
-          <svg class="icon-rafiki">
-            <use href="./img/sprite.svg#icon-rafiki"></use>
-          </svg>
-          <p class="text-page">
-            You haven't added any <br /><span class="text-span"
-              >favorite ingredients</span
-            >
-            yet
-          </p>
-        </div>
-      </div>
+    <section class="container">
+      <p class="title-page">Favorite ingredients</p>
     </section>
-   <load src="partials/footer/footer.html" />
+    <section class="container add-to-favorite-list"></section>
+    <load src="partials/footer/footer.html" />
 
     <load src="partials/modalCocktails/modalCocktails.html" />
 
