fix-favorite-footer

--- a/src/favCocktails.html
+++ b/src/favCocktails.html
@@ -15,15 +15,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="partials/header/header.html" />
-    <section class="container">
-      <p class="title-page">Favorite cocktails</p>
-    </section>
-    <section class="container add-to-favorite-list">
-      <ul class="add-to-favorite-coctail-list"></ul>
-    </section>
-    <load src="partials/footer/footer.html" />
-
+    <div class="page">
+      <load src="partials/header/header.html" />
+      <section class="container">
+        <p class="title-page">Favorite cocktails</p>
+      </section>
+      <section class="container add-to-favorite-list">
+        <ul class="add-to-favorite-coctail-list"></ul>
+      </section>
+      <load src="partials/footer/footer.html" />
+    </div>
     <load src="partials/modalCocktails/modalCocktails.html" />
 
     <script type="module" src="./favoriteCocktails.js"></script>
