--- a/src/ingredients.html
+++ b/src/ingredients.html
@@ -15,13 +15,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="partials/header/header.html" />
-    <section class="container">
-      <p class="title-page">Favorite ingredients</p>
-    </section>
-    <section class="container add-to-favorite-list"></section>
-    <load src="partials/footer/footer.html" />
-
+    <div class="page">
+      <load src="partials/header/header.html" />
+      <section class="container">
+        <p class="title-page">Favorite ingredients</p>
+      </section>
+      <section class="container add-to-favorite-list"></section>
+      <load src="partials/footer/footer.html" />
+    </div>
     <load src="partials/modalCocktails/modalCocktails.html" />
 
     <script type="module" src="./favoriteIngredients.js"></script>
